fix footer overlap

--- a/style.scss
+++ b/style.scss
@@ -272,6 +272,7 @@ nav {
 }
 
 .wrapper-footer {
+  clear: both;
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
